--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 </div>
                 <div class="sobre-texto">
                     <h1>Sonhos</h1>
-                    <p>Dominar as principais tecnologias do mercado que envolve construção de sistemas e <strong>Inteligência Artificial e </strong> 
+                    <p>Dominar as principais tecnologias do mercado que envolve construção de sistemas e <strong>Inteligência Artificial, </strong>e
                        montar minha própria empresa de <strong>Sistemas e WebSites.</strong><br><br>
                        Caso se interessem em fazer alguma parceria, segue abaixo meu contato.</p>
                 </div>
                 <div class="sobre-info">
-                    <p><i class="fa-brands fa-whatsapp"></i>(77) 99116-2642</p>
+                    <p><i class="fa-brands fa-whatsapp"></i>(77) 99116-2642</p><br>
                     <p><i class="fa fa-envelope" aria-hidden="true"></i>Email: wesleyramonriodopires@gmail.com</p>
                 </div>
             </div>
