--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </header>
     <section aria-label="seção curriculo download Ramon" class="section-div">
         <div class="download">
-            <h2>Olá sejam bem vindos!</h2>
+            <h2 class="mob">Olá sejam bem vindos!</h2>
             <h2 class="digitando">Meu nome é Wesley Ramon, sou Desenvolvedor e vou apresentar meu Portfólio, por gentileza desça a página...</h2>
             <p>"A tecnologia vai reinventar o negócio, mas as <strong>Relações humanas</strong> continuaram a ser a
                 chave para o sucesso"</p>
                 <a href="./assets/curriculo.pdf" download="curriculo">Download CV</a><br><br>
         </div>
         </div>
-        <img src="img/Full-HD-Developer-Wallpaper.jpg" alt="fundo-para-background">
+        <img src="img/header2.jpeg" alt="fundo-para-background">
     </section>
     <main>
         <article aria-label="seção sobre mim" class="sobre">
@@ -50,7 +50,7 @@
                 </div>
             </div>
             </div>
-            <img src="img/2cb9533b865a0094933acf2c48884ffd.jpg" alt="imagem de uma pessoa ilustrativa">
+            <img src="img/header.jpeg" alt="imagem de uma pessoa ilustrativa">
             <div class="sobre-conteudo">
                 <div class="sobre-texto">
                     <h1>Conquistas</h1>
