efeito de carrosel adicionado

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </section>
   </section>
     <main>
-        <article aria-label="seção sobre mim" class="sobre">
+       
+          <article aria-label="seção sobre mim" class="sobre">
             <div class="sobre-titulo">
                 <section id="about">
                 <h1>Sobre mim</h1>
@@ -50,9 +51,17 @@
                     <span></span>
                 </div>
             </div>
-            </div>
-            <img src="img/header.jpeg" alt="minha foto">
-            <div class="sobre-conteudo">
+            </div>   
+            <section class="galery">         
+                <div class="fotos">
+                    <img src="img/header.jpeg" alt="minha foto 1">
+                    <img src="img/carrosel2.jpeg" alt="minha foto 2">
+                    <img src="img/carrosel3.jpeg" alt="minha foto 3">
+                    <img src="img/carrosel4.jpeg" alt="minha foto 4">
+                    <img src="img/carrosel5.jpeg" alt="minha foto 5">
+                </div>   
+            </section>         
+                <div class="sobre-conteudo">
                 <div class="sobre-texto">
                     <h1>Conquistas</h1>
                     <p>Graduado em Análise e Desenvolvimento de Sistemas e especializando em aplicações Full-Stack, tive experiências extraordinárias 
@@ -69,8 +78,8 @@
                     <p><i class="fa-brands fa-whatsapp"></i>(77) 99116-2642</p><br>
                     <p><i class="fa fa-envelope" aria-hidden="true"></i>Email: wesleyramonriodopires@gmail.com</p>
                 </div>
-            </div>
-        </article>
+            </div>           
+        </article>    
     </section>
     </main>
     <section class="services">
