--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <h2>GRÁFICA <br> Clique no Cartão</h2>
                 </div>
                 <div class="face back">
-                    <h2><a href="https://wesleyanalistarp.github.io/wesleyramon/" target="_blank">Clique aqui</a><br>Para ter acesso ao site</h2>
+                    <h2><a href="https://wesleyanalistarp.github.io/grafica/" target="_blank">Clique aqui</a><br>Para ter acesso ao site</h2>
                 </div>  
             </div>  
             <div class="cards">
